working on main section with bootstrap grid system

--- a/index.html
+++ b/index.html
@@ -32,12 +32,28 @@
                 </div>
             </div>
         </nav>
-        <div class="container">
-            <div class="col-md-8" id="pic">
-                <p>test</p>
-            </div>
-            <div class="col-lg-4" id="pic2">
-                <p>test</p>
+
+        <div class="container text-left">
+            <div class="row g-0">
+                <div class="col-lg-8 col-md-12" id="main-section">
+                    <div id="main-photo"> 
+                        image tbd
+                    </div>
+                    <div class="row">
+                        <div class="col m-1">
+                            <h1>Top Hits from 2023?</h1>
+                        </div>
+                        <div class="col m-1">
+                            <p>
+                                As we revisit the year 2023, music enthusiasts around the world are eagerly anticipating the next wave of top musicians. It is exciting to see who is next to captivate us with their performance!
+                            </p>
+                            <button type="button" class="btn" id="readmore-btn"> Read More </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col" id="side-articles">
+                    side articles navigation
+                </div>
             </div>
         </div>
     </div>
