added responsive image/article cards

--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
 
         <div class="container text-left">
             <div class="row g-0">
-                <div class="col-lg-8 col-md-12" id="main-section">
+                <div class="col-lg-8 col-md-12 me-lg-4" id="main-section">
                     <div id="main-photo"> 
                         image tbd
                     </div>
-                    <div class="row">
-                        <div class="col m-1">
+
+                    <div class="row g-0">
+                        <div class="col-lg-4 col-md-12">
                             <h1>Top Hits from 2023?</h1>
                         </div>
-                        <div class="col m-1">
+                        <div class="col">
                             <p>
                                 As we revisit the year 2023, music enthusiasts around the world are eagerly anticipating the next wave of top musicians. It is exciting to see who is next to captivate us with their performance!
                             </p>
@@ -54,6 +55,49 @@
                 <div class="col" id="side-articles">
                     side articles navigation
                 </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row g-0">
+
+                <div class="col-lg-4 col-md-12">
+                    <div class="row">
+                        <div class="col-auto">
+                            <div class="subphoto">img tbd</div>
+                        </div>
+                        <div class="col">
+                            <h2>01</h2>
+                            <h4>Title 1</h4>
+                            <p class="p-xxl-1 p-lg-0">Short blurb here about an artist's newest album.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                    <div class="row">
+                        <div class="col-auto">
+                            <div class="subphoto">img tbd</div>
+                        </div>
+                        <div class="col">
+                            <h2>02</h2>
+                            <h4>Title 1</h4>
+                            <p class="p-lg-1">Short blurb here about an artist's newest album.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                    <div class="row">
+                        <div class="col-auto ms-lg-4">
+                            <div class="subphoto">img tbd</div>
+                        </div>
+                        <div class="col">
+                            <h2>03</h2>
+                            <h4>Title 1</h4>
+                            <p class="p-lg-1">Short blurb here about an artist's newest album.</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
