--- a/index.html
+++ b/index.html
@@ -52,15 +52,29 @@
                         </div>
                     </div>
                 </div>
-                <div class="col" id="side-articles">
-                    side articles navigation
+                <div class="col p-4" id="side-articles">
+                    <h2>New</h2>
+                    <hr/>
+                    <div class="row">
+                        <h4>Article 1</h4>
+                        <p>A paragraph about this topic</p>
+                    </div>
+                    <hr/>
+                    <div class="row">
+                        <h4>Article 2</h4>
+                        <p>A paragraph about this topic</p>
+                    </div> 
+                    <hr/>
+                    <div class="row">
+                        <h4>Article 3</h4>
+                        <p>A paragraph about this topic</p>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div class="row g-0">
-
                 <div class="col-lg-4 col-md-12">
                     <div class="row">
                         <div class="col-auto">
@@ -97,7 +111,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
