--- a/index.html
+++ b/index.html
@@ -56,24 +56,24 @@
                     <h2>New</h2>
                     <hr/>
                     <div class="row">
-                        <h4>Article 1</h4>
-                        <p>A paragraph about this topic</p>
+                        <h4>The Reign of Beyonce</h4>
+                        <p>Explore how Beyonce continues to influence the industry with her music and performances</p>
                     </div>
                     <hr/>
                     <div class="row">
-                        <h4>Article 2</h4>
-                        <p>A paragraph about this topic</p>
+                        <h4>BTS Takes the World by Storm</h4>
+                        <p>Dive into the growing popularity of K-Pop and how BTS has become one of the biggest musical acts in the world</p>
                     </div> 
                     <hr/>
                     <div class="row">
-                        <h4>Article 3</h4>
-                        <p>A paragraph about this topic</p>
+                        <h4>Billie Eilish: The Voice of a Generation</h4>
+                        <p>Examine how Billie Eilish has become a voice for young people in 2023, how her music address important issues and create connection with her fans</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="container">
+        <div class="container mt-4">
             <div class="row g-0">
                 <div class="col-lg-4 col-md-12">
                     <div class="row">
@@ -82,8 +82,10 @@
                         </div>
                         <div class="col">
                             <h2>01</h2>
-                            <h4>Title 1</h4>
-                            <p class="p-xxl-1 p-lg-0">Short blurb here about an artist's newest album.</p>
+                            <h4>Evolution - Hozier</h4>
+                            <p class="p-xxl-1 p-lg-0">
+                                See what can fans can expect from Hozier's latest album
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -94,8 +96,10 @@
                         </div>
                         <div class="col">
                             <h2>02</h2>
-                            <h4>Title 1</h4>
-                            <p class="p-lg-1">Short blurb here about an artist's newest album.</p>
+                            <h4>Rise to Fame - Brandi Carlile</h4>
+                            <p class="p-lg-1">
+                                How Brandi Carlile became one of this year's top artists
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -106,8 +110,10 @@
                         </div>
                         <div class="col">
                             <h2>03</h2>
-                            <h4>Title 1</h4>
-                            <p class="p-lg-1">Short blurb here about an artist's newest album.</p>
+                            <h4>Identity - Sam Smith</h4>
+                            <p class="p-lg-1">
+                                How Sam Smith's identity and connection shapes their top hits
+                            </p>
                         </div>
                     </div>
                 </div>
