added corresponding images

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="container text-left">
             <div class="row g-0">
                 <div class="col-lg-8 col-md-12 me-lg-4" id="main-section">
-                    <div id="main-photo"> 
-                        image tbd
+                    <div id="main-banner"> 
+                        <img id="banner-photo" class="img-fluid" src="./assets/images/marcela-laskoski-unsplash.jpg" alt="A closeup of a DJ working a pink and purple neon turntable"/>
                     </div>
 
                     <div class="row g-0">
@@ -78,11 +78,13 @@
                 <div class="col-lg-4 col-md-12">
                     <div class="row">
                         <div class="col-auto">
-                            <div class="subphoto">img tbd</div>
+                            <div class="subphoto">
+                                <img class="img-fluid flex-shrink-0 h-100" src="./assets/images/efe-kurnaz-RnCPiXixooY-unsplash.jpg" alt="a pink, green, blue, and orange glowing hallway leading to a bright orange door"/>
+                            </div>
                         </div>
                         <div class="col">
                             <h2>01</h2>
-                            <h4>Evolution - Hozier</h4>
+                            <h4>Hozier</h4>
                             <p class="p-xxl-1 p-lg-0">
                                 See what can fans can expect from Hozier's latest album
                             </p>
@@ -92,11 +94,13 @@
                 <div class="col-lg-4 col-sm-12">
                     <div class="row">
                         <div class="col-auto">
-                            <div class="subphoto">img tbd</div>
+                            <div class="subphoto">
+                                <img class="img-fluid h-100" src="./assets/images/felipe-portella-h6gTtqBZUxc-unsplash.jpg" alt="a singer playing their guitar onstage with green and pink stagelight shining onto them"/>
+                            </div>
                         </div>
                         <div class="col">
                             <h2>02</h2>
-                            <h4>Rise to Fame - Brandi Carlile</h4>
+                            <h4>Brandi Carlile</h4>
                             <p class="p-lg-1">
                                 How Brandi Carlile became one of this year's top artists
                             </p>
@@ -106,13 +110,15 @@
                 <div class="col-lg-4 col-sm-12">
                     <div class="row">
                         <div class="col-auto ms-lg-4">
-                            <div class="subphoto">img tbd</div>
+                            <div class="subphoto">
+                                 <img class="img-fluid" src="./assets/images/erik-mclean-QzpgqElvSiA-unsplash.jpg" alt="a pink and a yellow vynal disk where the yellow is at the bottom of the picture, slightly covering up the pink"/>
+                            </div>
                         </div>
                         <div class="col">
                             <h2>03</h2>
-                            <h4>Identity - Sam Smith</h4>
+                            <h4>Sam Smith</h4>
                             <p class="p-lg-1">
-                                How Sam Smith's identity and connection shapes their top hits
+                                Learn how Sam Smith's identity and connection shapes their top hits
                             </p>
                         </div>
                     </div>
